Bug 336692 - KRunner does not come up when a user starts typing on the desktop
Summary: KRunner does not come up when a user starts typing on the desktop
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.0
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-25 09:19 UTC by Rohan Garg
Modified: 2014-06-26 09:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2014-06-25 09:19:34 UTC
In KDE SC 4.13.2 if I start typing on the desktop, without any other application having focus, krunner comes up, this is not the case in Plasma 5.

Reproducible: Always

Steps to Reproduce:
1. Start typing on a empty desktop
2. Nothing happens
3.
Actual Results:  
Nothing happens

Expected Results:  
KRunner should start
Comment 1 Vishesh Handa 2014-06-26 09:40:55 UTC
Git commit 9fd2842d78137a3c7357da5c1acdc163c4889d04 by Vishesh Handa.
Committed on 25/06/2014 at 14:42.
Pushed by vhanda into branch 'master'.

DesktopView: Launch krunner on typing

This is consistent with the behaviour in Plasma 4.
REVIEW: 118937

M  +4    -0    shell/CMakeLists.txt
M  +17   -0    shell/desktopview.cpp
M  +1    -0    shell/desktopview.h

http://commits.kde.org/plasma-workspace/9fd2842d78137a3c7357da5c1acdc163c4889d04