DesktopView: Launch krunner on typing

This is consistent with the behaviour in Plasma 4.

BUG: 336692
REVIEW: 118937